<resources>
    <string name="app_name">To Do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open menu</string>
    <string name="close_nav">Close menu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_placeholder">email@address.com</string>
    <string name="login_button_text">Login</string>
    <string name="redirect_register_link_description_text">Don\'t you have an account ?</string>
    <string name="redirect_register_link_text">Click here</string>
    <string name="options_icon_text">⋮</string>
    <string name="register_button_text">Register</string>
    <string name="redirect_login_page_description_text">Do you have an account ?</string>
    <string name="redirect_login_page_link_text">Click here</string>
    <string name="log_out_menu_text">Log out</string>
    <string name="update_user_profile_menu">Update User Profile</string>
    <string name="home_menu">Home</string>
    <string name="check_connection">Please check your connection</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="oops">OOPS!</string>
    <string name="add_new_task_header">Add new task</string>
    <string name="name_placeholder">Name</string>
    <string name="description_placeholder">Description</string>
    <string name="level_importance_placeholder">Level Importance</string>
    <string name="colors_placeholder">Colors</string>
    <string name="set_alarm_placeholder">Set Alarm</string>
    <string name="end_time_placeholder">End Time</string>
    <string name="add_new_task_button_text">Add</string>
    <string name="filter_task_button_text">Filter</string>
    <string name="filter_by_status_placeholder">By Status</string>
    <string name="filter_by_level_importance_placeholder">By Level Importance</string>
    <string name="filter_tasks_header">Filter Tasks</string>
    <string name="update_task_button_text">Update</string>
    <string name="update_task_header">Update Task</string>
    <string name="update_profile_photo_button_text">Update Profile Photo</string>
    <string name="clear_profile_photo_button_text">Clear Profile Photo</string>
    <string name="profile_photo_processes_header">Profile Photo</string>
    <string name="update_username_button_text">Update Username</string>
    <string name="username_placeholder">Username</string>
    <string name="update_profile_header">Update Profile</string>
    <string name="password_placeholder">Password</string>
    <string name="password_repeat_placeholder">Password Repeat</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="register_fill_blanks">Please fill all blanks</string>
    <string name="password_and_password_repeat_should_same">Password and password repeat has to be same</string>
    <string name="password_min_length_error">Password length has to be at least six characters</string>
    <string name="successfully_signed_up">Successfully signed up</string>
    <string name="failed_to_read_tasks">Failed to read tasks</string>
    <string name="successfully_cleared_profile_photo">Successfully cleared profile photo</string>
    <string name="failed_to_delete_profile_photo">Failed to delete profile photo , try again</string>
    <string name="successfully_updated_username">Successfully updated username</string>
    <string name="successfully_uploaded_profile_photo">Successfully uploaded profile photo</string>
    <string name="failed_to_upload_profile_photo">Failed to uploaded profile photo , try again</string>
    <string name="successfully_updated_task">Successfully updated task</string>
</resources>