<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/light_purple"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/textViewUsernameHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/username_placeholder" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:ems="10" />

            <Button
                android:id="@+id/buttonUpdateUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:text="@string/update_username_button_text" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayoutHorizontalDividerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_photo_processes_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/buttonClearProfilePhoto"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:text="@string/clear_profile_photo_button_text" />

            <Button
                android:id="@+id/buttonUpdatePhoto"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:text="@string/update_profile_photo_button_text" />

        </LinearLayout>

</LinearLayout>
