<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <FrameLayout
            android:id="@+id/frameLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/black">

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nav_home"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/nav_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/home_menu" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_update_user_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/nav_update_user_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/update_user_profile_menu" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/nav_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/log_out_menu_text" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
